Add meta tags for SEO and social media sharing in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CineMatch - Intelligent Movie Recommendations</title>
+    <meta
+      name="description"
+      content="CineMatch is an intelligent movie recommendation system using hybrid KNN-based filtering for personalized suggestions."
+    />
+    <meta
+      name="keywords"
+      content="CineMatch, movie recommendation, FastAPI, KNN algorithm, content-based filtering, collaborative filtering, TF-IDF, AI project"
+    />
+    <meta name="author" content="Asadullah Imran" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="images/film-solid.svg" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="CineMatch - Intelligent Movie Recommendations"
+    />
+    <meta
+      property="og:description"
+      content="Discover movies you'll love with CineMatch, a hybrid AI-powered recommendation system."
+    />
+    <meta property="og:image" content="images/ss_home.png" />
+    <meta
+      property="og:url"
+      content="https://your-portfolio-link.com/cinematch"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="CineMatch - Intelligent Movie Recommendations"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover movies you'll love with CineMatch, a hybrid AI-powered recommendation system."
+    />
+    <meta name="twitter:image" content="images/ss_home.png" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
